--- a/package.json
+++ b/package.json
@@ -4,23 +4,39 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server --config build/webpack.config.js",
+    "build": "webpack --config build/webpack.config.js",
+    "start:vue": "webpack-dev-server --config build/webpack.vue.config.js",
+    "build:vue": "webpack --config build/webpack.vue.config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vue/compiler-sfc": "^3.2.47",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^5.0.0",
+    "ejs-loader": "^0.5.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-loader": "^17.0.1",
+    "vue-router": "^4.1.6",
+    "vue-template-compiler": "^2.7.14",
+    "webpack": "^5.78.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.13.2"
   },
   "dependencies": {
+    "css-loader": "^6.7.3",
     "ejs": "^3.1.9",
+    "ejs-loader": "^0.5.0",
     "flexslider": "^2.7.2",
-    "jquery": "^3.6.4"
+    "jquery": "^3.6.4",
+    "vue": "^3.2.47",
+    "vue-loader": "^17.0.1",
+    "vue-router": "^4.1.6"
   }
 }
